/*
 * Copyright 2024 Signal Messenger, LLC
 * SPDX-License-Identifier: AGPL-3.0-only
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.signal.keytransparency.audit";

package org.signal.keytransparency.audit;

import "key_transparency.proto";

message TestVectors {
  message ShouldFailTestVector {
    string description = 1;
    repeated kt.AuditorUpdate updates = 2;
  }

  message ShouldSucceedTestVector {
    message UpdateAndHash {
      kt.AuditorUpdate update = 1;
      bytes log_root = 2;
    }
    repeated UpdateAndHash updates = 1;
  }

  message SignatureTestVector {
    bytes auditor_private_key = 8;

    uint32 deployment_mode = 1;
    bytes signature_public_key = 2;
    bytes auditor_public_key = 9;
    bytes vrf_public_key = 3;

    uint64 tree_size = 4;
    int64 timestamp = 5;
    bytes root = 6;

    bytes signature = 7;
  }

  repeated ShouldFailTestVector should_fail = 1;
  ShouldSucceedTestVector should_succeed = 2;
  SignatureTestVector signature = 3;
}

